# website-akm

./: .gitignore  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  start.sh
backend/rust-backend/: .env.example  .gitattributes  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prebuilt  diesel.toml  diesel_migrations.sh
backend/rust-backend/migrations/2024-10-30-111011_users/: up.sql
backend/rust-backend/migrations/2024-11-08-132548_posts/: up.sql
backend/rust-backend/migrations/2025-01-14-111111_posts/: down.sql  up.sql
backend/rust-backend/migrations/2025-01-16-111111_posts/: down.sql  up.sql
backend/rust-backend/src/: lib.rs  main.rs  schema.rs
backend/rust-backend/src/configs/: config.rs
backend/rust-backend/src/controller/: mod.rs
backend/rust-backend/src/controller/apis_logic/: login.rs  posts.rs
backend/rust-backend/src/controller/db/: connection.rs  migration.rs  mod.rs  startup.rs
backend/rust-backend/src/controller/login/: login.rs
backend/rust-backend/src/controller/middlewares/: auth.rs  mod.rs  val_user.rs
backend/rust-backend/src/controller/security/: login.rs  mod.rs  password.rs
backend/rust-backend/src/controller/utils/: env_var.rs  mod.rs  util.rs
backend/rust-backend/src/models/: mod.rs  security.rs  user.rs
backend/rust-backend/src/models/api_schema/: login.rs  mod.rs  posts.rs
backend/rust-backend/src/models/psql/: mod.rs  posts.rs  schema.rs  schemas.rs  users.rs
backend/rust-backend/src/views/: login.rs  mod.rs  posts.rs  swagger_ui.rs
frontend/: Dockerfile  default.conf  index.html  (+3 more)
(+47 files in other folders)
