[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
bytes = "1.8.0"
diesel = { version = "2.2.4", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
hmac = "0.12.1"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.5.0"
jsonwebtoken = "9.3.0"
jwt = "0.16.0"
postgres = "0.19.9"
serde = "1.0.213"
serde_json = "1.0.132"
sha2 = "0.10.8"
tokio = {version ="1.41.0",features = ["full"]}
tower = "0.5.1"
tower-http = {version="0.6.1", features = ["full"]}
utoipa ={version = "5.1.3",features = ["axum_extras"]} 
utoipa-swagger-ui = {version = "8.0.3", features=["axum"]}
